--- a/templates/user.html
+++ b/templates/user.html
@@ -29,6 +29,7 @@
         <h1>Hello, Petar!</h1>
     </div>
     <p>The local date and time is {{ moment(current_time).format('LLLL') }}.</p>
+    <p>That was {{ moment(current_time).fromNow(refresh=True) }}</p>
 </div>
 {% endblock %}
 
